@@ -37,6 +37,11 @@ MulticastGroupAddress=(String "" Host Address) if not empty MulticastGroup is ad
 EnableChatWithAllUsers=[true/false] if enabled you can chat with all users connected by default (default=true)
 UseHive=[true/false] enable HIVE protocol. BeeBEEPs tell each other their connected users (default=true) [3.0.4]
 UseHostnameForDefaultUsername=[true/false] if enabled BeeBEEP uses hostname as default username at first startup (default=false) [3.0.6]
+HideMainToolbar=[true/false] If enabled BeeBEEP hide the main toolbar at startup (default=false) [3.0.6]
+HideChatToolbar=[true/false] If enabled BeeBEEP hide the chat toolbar startup (default=false) [3.0.6]
+HideUsersPanel=[true/false] If enabled BeeBEEP hide users panel at startup (default=false) [3.0.6]
+HideOtherPanels=[true/false] If enabled BeeBEEP hide all other panels at startup (default=false) [3.0.6]
+AskNicknameAtStartup=[true/false] show nickname dialog at connection to BeeBEEP network [3.0.6]
 
 [Groups]
 TrustNickname= if true BeeBEEP trusts also in nickname to recognize a user when he or she reconnect (default=true) [1.0.0]
@@ -85,7 +90,6 @@ AutoAwayStatus=[true/false] set your status away when pc is in idle
 UserAwayTimeout= how many minutes your pc must be in idle to set your status in away
 UseDefaultPassword=[true/false] use default BeeBEEP password
 AskPasswordAtStartup=[true/false] show password dialog at connection to BeeBEEP network
-AskNicknameAtStartup=[true/false] show nickname dialog at connection to BeeBEEP network [3.0.5]
 MaxStatusInList=(10) maximum number of status used recently
 
 [VCard]
